--- a/app/public/css/site.css
+++ b/app/public/css/site.css
@@ -47,7 +47,7 @@ a{
         font-family: monospace;
         background-image: url('/img/background/TomorrowWillBeABetterDay.jpg');
         color: white;
-        background-size: cover;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
         background-attachment: fixed;
         opacity: unset;
